.provarCaches/00D5f000005vwGkEAI/objects/rstk__peitemmfr__c.object
<CustomObject>
    <description>peitemmfr__c: This table (PEITEMMFR) is the Approved Manufacturer by Item table.  On certain items, engineering may decide that only certain ‘manufacturers’ are approved.  These are not ‘vendors’ but ‘manufacturers’.   This is often used when buying electronic components through a distributor with the option of having engineering ‘approve’ certain manufacturers – but not others for a given item.  This table is also used to set up the ‘Approved Manufacturer by Vendor Item’ (POVENDMFR).</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__peitemmfr_item__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__peitemmfr_mfritemid__c &amp; &apos;_&apos; &amp; rstk__peitemmfr_mfritemno__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__peitemmfr_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__peitemmfr_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_comments__c</fullName>
        <description>Additional comments. (DD)</description>
        <inlineHelpText>Comments associated with this Approved Manufacturer&apos;s Item</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Approved Manufacturer&apos;s Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Approved Mfr by Item</relationshipLabel>
        <relationshipName>divpeitemmfrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_item__c</fullName>
        <inlineHelpText>Purchase Item Number</inlineHelpText>
        <label>Eng Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Approved Manufacturer by Item</relationshipLabel>
        <relationshipName>Approved_Mfr_by_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_mfritemdesc__c</fullName>
        <description>Manufacturer’s description of the item. (DD)</description>
        <inlineHelpText>Manufacturer&apos;s Item Description</inlineHelpText>
        <label>Manufacturer Item Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_mfritemid__c</fullName>
        <description>This is a free form field without edits that the user can decide their own conventions as to what to enter. (DD)</description>
        <inlineHelpText>Manufacturer&apos;s Item  Identification</inlineHelpText>
        <label>Manufacturer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_mfritemno__c</fullName>
        <description>Manufacturer’s number for the item 

This is a free form field without edits that the user can decide their own conventions as to what to enter. (DD)</description>
        <inlineHelpText>Manufacturer&apos;s Item Number</inlineHelpText>
        <label>Manufacturer Item No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitemmfr_mfrname__c</fullName>
        <inlineHelpText>Approved Manufacturer&apos;s Name</inlineHelpText>
        <label>Manufacturer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Approved Manufacturer by Item</label>
    <listViews>
        <fullName>rstk__RS_Approved_Manufacturers</fullName>
        <columns>NAME</columns>
        <columns>rstk__peitemmfr_div__c</columns>
        <columns>rstk__peitemmfr_mfritemid__c</columns>
        <columns>rstk__peitemmfr_mfritemno__c</columns>
        <columns>rstk__peitemmfr_mfrname__c</columns>
        <columns>rstk__peitemmfr_item__c</columns>
        <columns>rstk__peitemmfr_mfritemdesc__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>RS Approved Manufacturers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Manufacturer by Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__EngItemIsRequired</fullName>
        <active>true</active>
        <description>Eng Item is Required.</description>
        <errorConditionFormula>ISBLANK(rstk__peitemmfr_item__c)</errorConditionFormula>
        <errorMessage>Eng Item is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Manufacturer_Item_No</fullName>
        <active>true</active>
        <description>Manufacturer Item No is Required.</description>
        <errorConditionFormula>ISBLANK(rstk__peitemmfr_mfritemno__c)</errorConditionFormula>
        <errorMessage>Manufacturer Item No is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Mfr_Id</fullName>
        <active>true</active>
        <description>Mfr Id is Required.</description>
        <errorConditionFormula>ISBLANK( rstk__peitemmfr_mfritemid__c )</errorConditionFormula>
        <errorMessage>Mfr Id is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Mfr_Name_Req</fullName>
        <active>true</active>
        <description>Mfr Name is Required.</description>
        <errorConditionFormula>ISBLANK(rstk__peitemmfr_mfrname__c)</errorConditionFormula>
        <errorMessage>Mfr Name is Required.</errorMessage>
    </validationRules>
</CustomObject>